--- a/platform.web/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -30,7 +30,7 @@
 
 		<ng-template ngFor let-col [ngForOf]="params">
 
-			<p-column *ngIf="!col?.config?.type?.nested"
+			<p-column 
 				[field]="col?.config?.code" 
 				[header]="col?.config?.label"
 				[hidden]="col?.config?.uiStyles?.attributes?.hidden"
@@ -51,26 +51,12 @@
 					<span title="{{row[col.field]}}">{{row[col.field]}}</span> 
 				</ng-template> 
 				
-				<!-- Sandeep -->
-				<!-- The below commented lines from to END are to be uncommented when the server starts sending the enabled flag
-				for every grid column. -->
-				<!-- <ng-template *ngIf="col.config.uiStyles?.isLink && col.enabled?.currState" pTemplate="body" let-cell="rowData"> -->
-				<ng-template *ngIf="col.config.uiStyles?.isLink" pTemplate="body" let-cell="rowData">
-					<span [ngSwitch]="col.config.uiStyles?.attributes?.imgSrc"> 
-						<a *ngSwitchCase="''" href="javascript:void(0)" (click)="processOnClick(col, cell)"> {{col.config.label}}  </a> 
-						<img *ngSwitchDefault src="{{imagesPath}}{{col.config?.uiStyles?.attributes?.imgSrc}}" class="grid-icon" (click)="processOnClick(col, cell)" type="submit" />
-					</span> 
-				</ng-template> 
-				<!-- END -->
-
-				<!-- 				
-				<ng-template *ngIf="col.config.uiStyles?.isLink && !col.enabled?.currState" pTemplate="body" let-cell="rowData">
-					<span [ngSwitch]="col.config.uiStyles?.attributes?.imgSrc">
-						<a *ngSwitchCase="''" href="javascript:void(0)" class="btn disabled">{{col.config.label}} </a> 
-						<img *ngSwitchDefault src="{{imagesPath}}{{col.config?.uiStyles?.attributes?.imgSrc}}" class="grid-icon" />
-					</span>
+				<ng-template *ngIf="col.config?.uiStyles?.attributes?.alias=='LinkMenu'" pTemplate="body" let-cell="rowData">
+					<nm-action-dropdown [params]="col?.params"
+						[elementPath]="getRowPath(col, cell)"></nm-action-dropdown>
 				</ng-template>
-				 -->
+				
+		
 			</p-column> 
 
 		</ng-template>
