--- a/platform.web/nimbusui/src/app/components/platform/grid/grid.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/grid/grid.component.html
@@ -30,20 +30,20 @@
 
 		<ng-template ngFor let-col [ngForOf]="params">
 
-			<p-column 
-				[field]="col?.config?.code" 
-				[header]="col?.config?.label"
-				[hidden]="col?.config?.uiStyles?.attributes?.hidden"
-				[sortable]="!col?.config?.uiStyles?.isLink"
-				[filter]="col?.config?.uiStyles?.attributes?.filter"
-				[filterMatchMode]="col?.config?.uiStyles?.attributes?.filterMode"> 
+			<p-column *ngIf="col?.uiStyles?.attributes?.alias != 'Link'"
+				[field]="col?.code" 
+				[header]="col?.label"
+				[hidden]="col?.uiStyles?.attributes?.hidden"
+				[sortable]="!col?.uiStyles?.isLink"
+				[filter]="col?.uiStyles?.attributes?.filter"
+				[filterMatchMode]="col?.uiStyles?.attributes?.filterMode"> 
 							
 				<ng-template pTemplate="header"> 
-					<span title="{{col?.config?.label}}"  *ngIf="!col.config?.uiStyles?.isLink">{{col.config.label}}</span> 
-					<a href="javascript:void(0)" (click)="toggleFilter($event)" class='gridFilterIcon' *ngIf="!col.config?.uiStyles?.isLink"></a> 
+					<span title="{{col?.label}}"  *ngIf="!col?.uiStyles?.isLink">{{col.label}}</span> 
+					<a href="javascript:void(0)" (click)="toggleFilter($event)" class='gridFilterIcon' *ngIf="!col?.uiStyles?.isLink"></a> 
 				</ng-template> 
 				
-				<ng-template *ngIf="col.config?.uiStyles?.attributes?.alias == 'CheckBox'" pTemplate="body" let-cell="rowData"> 
+				<ng-template *ngIf="col?.uiStyles?.attributes?.alias == 'CheckBox'" pTemplate="body" let-cell="rowData"> 
 					<label> <input type="checkbox" (click)="postOnChange(col, cell)"> </label> 
 				</ng-template> 
 				
@@ -51,8 +51,8 @@
 					<span title="{{row[col.field]}}">{{row[col.field]}}</span> 
 				</ng-template> 
 				
-				<ng-template *ngIf="col.config?.uiStyles?.attributes?.alias=='LinkMenu'" pTemplate="body" let-cell="rowData">
-					<nm-action-dropdown [params]="col?.params"
+				<ng-template *ngIf="col?.uiStyles?.attributes?.alias=='LinkMenu'" pTemplate="body" let-cell="rowData">
+					<nm-action-dropdown [params]="col?.nestedParams"
 						[elementPath]="getRowPath(col, cell)"></nm-action-dropdown>
 				</ng-template>
 				
@@ -61,7 +61,7 @@
 
 		</ng-template>
 				
-		<ng-template ngFor let-col [ngForOf]="params">
+		<!-- <ng-template ngFor let-col [ngForOf]="params">
 			<ng-template *ngIf="col?.config?.type?.nested" let-subTbl pTemplate="rowexpansion">
 				<infinite-scroll-grid
 								[data]="col?.config?.gridList"
@@ -69,7 +69,7 @@
 								[params]="col?.config?.gridCols">
 				</infinite-scroll-grid>
 			</ng-template>
-		</ng-template>
+		</ng-template> -->
 		
 		<p-footer> 
 			<ng-template [ngIf]="element.config?.uiStyles?.attributes?.postButton">
