update grid styles

--- a/platform.web/nimbusui/src/app/components/login/login.component.html
+++ b/platform.web/nimbusui/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="col-sm-8 push-sm-2 col-md-6 push-md-3 col-lg-4 push-lg-4 mt-3 border-all clearfix">
-  <div class="card card-block ">
+<div class="col-sm-8 push-sm-2 col-md-6 push-md-3 col-lg-4 push-lg-4 mt-3 clearfix">
+  <div class="card card-block p-2">
     <h3 class="card-title">Login</h3>
     <div class="col-sm-12 mt-2 mb-2">
       <a class="mr-2" href="http://localhost:8080/login/google?redirect_uri=http://localhost:3000/index.html%23/CLIENT/CLIENT">
