--- a/platform.web/nimbusui/src/assets/scss/_a.header.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.header.scss
@@ -8,7 +8,7 @@
     z-index: 1000;
 	background-color: $header-bkg;
 	padding-top: .9rem;
-	
+	position: fixed;
 	label{
 		color:#fff;
 		font-size: .9rem;
