--- a/platform.web/nimbusui/src/assets/scss/_a.button.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.button.scss
@@ -56,6 +56,7 @@
     background: #fff;
     font-size: .9rem;
     border-radius:0;
+    min-height: 1.6rem;
     .badge {
           position: absolute;
           top: .1rem;
