--- a/platform.web/nimbusui/src/assets/scss/_a.custom-dropdown.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.custom-dropdown.scss
@@ -1,22 +1,28 @@
 
-.ui-datatable tr > td:last-child {
+.ui-datatable {
     .custom-dropdown {
+        display: inline-block;
+        vertical-align: top;
         .dropdownTrigger {
-            width: 40%;
-            text-align: center;
-            &::before {
-                content: "...";
-            }
+            width: 1.3rem;
+            height: 1.3rem;
+            padding: 0;
+            border: none;
+            background: none;
+            top: 0;
+            left: 0;
             &::after {
                 width: 1.3rem;
+                height: 1.3rem;
                 font-size: .9rem;
-                top:1px;
+                top: 0;
+                right: 0;
             }
         }
         &.open .dropdownContent{
             right: 0;
             width: 200px;
-            padding: .2rem .5rem;
+            padding: 0;
         }
         &>label{
             @extend .sr-only;
