--- a/platform.web/nimbusui/src/assets/scss/_a.tooltip.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.tooltip.scss
@@ -1,12 +1,15 @@
 .tooltip-container{
     display: inline-block;
     position: relative;
-    z-index: 1;
+    z-index: 3;
     &.helpIcon{
         .tooltip-trigger {
             height: 1.2rem;
             width: 1.2rem;
             margin-left: .7rem;
+            background: none;
+            border: none;
+            padding: 0;
             &::before {
                 font-family: fontAwesome;
                 content: "\f059";
@@ -54,7 +57,7 @@
     font-size: 0.7rem;
     opacity: 0;
     transition: opacity 1s;
-    z-index: 2;
+    z-index: 4;
     box-shadow: rgb(136, 136, 136) 2px 2px 6px;
     &::before{
         position:absolute;
