--- a/platform.web/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -20,7 +20,15 @@
     font-weight: 300;
     line-height:1;
 }
-
+h1{
+    font-size: 1.3rem;
+}
+h2{
+    font-size: 1.2rem;
+}
+h3{
+    font-size: 1.1rem;
+}
 .main-content{
     .style-guide {
     .info-bar {
@@ -647,9 +655,21 @@ legend {
     margin-top: 10px;
     & > .panel-heading {
         background: #014080;
+        color: white;
         padding: 0.3rem;
-        a {
-            color: white;
+        margin: 0;
+        font-weight: 300;
+        button {
+            all: inherit;
+            width:100%;
+            cursor: pointer;
+            &::before{
+                font-family: "FontAwesome";
+                content: "\f0da";
+                margin-right: .9rem;
+                transition: transform 400ms;
+                display: inline-block;
+            }
         }
     }
     .panel-collapse {
@@ -657,6 +677,14 @@ legend {
         overflow: hidden;
         display: block;
         padding-left: 0px;
+    }
+    &.openPanel{
+        & > .panel-heading {
+            button::before {
+                //content: "\f0d7"; 
+                transform: rotate(90deg);
+            }
+        }               
     }
 }
 
