--- a/platform.web/nimbusui/src/assets/scss/_a.header-sub.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.header-sub.scss
@@ -7,6 +7,46 @@
     right: 0;
     background-color: $subheader-background-color;
     color: $subheader-font-color;
+    z-index: 1;
+    &> ul {
+        display:inline-block;
+        &> li {
+            display: inline-block;
+            vertical-align: top;
+    
+            height: 30px;
+            line-height: 1.9rem;
+            min-width: 150px;
+            button {
+                width: 100%;
+                padding: 0 .5rem;
+            }
+            &> ul {
+                list-style: none;
+                padding: 0;
+                background: black;
+                color: #fff;
+                max-height: 0;
+                transition: all 600ms;
+                transition-delay: 200ms;
+                overflow: hidden;
+                &>li {
+                    padding: .2rem .5rem;
+                }
+            }
+            &:hover{
+                background: #cecece;
+                color: black;
+                &> ul {
+                    max-height: 200px;
+                    li:hover{
+                        background: #cecece;
+                        color: black;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .title-con {
