--- a/platform.web/nimbusui/src/app/components/platform/form-element.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/form-element.component.html
@@ -6,6 +6,8 @@
     <nm-input-textarea id="{{id}}" [formControlName]="element.config?.code" *ngIf="element.config?.uiStyles?.attributes?.type=='textarea'" [element]="element" [form]="form"></nm-input-textarea>
     <nm-input-date  id="{{id}}" [formControlName]="element.config?.code"  [disableFormControl]="form.get(element.config?.code)"
         [disableCondition]="element?.enabled?.currState" *ngIf="element.config?.uiStyles?.attributes?.type=='date'" [element]="element" [form]="form"></nm-input-date>
+    <nm-input-calendar  id="{{id}}" [formControlName]="element.config?.code"  [disableFormControl]="form.get(element.config?.code)"
+        [disableCondition]="element?.enabled?.currState" *ngIf="element.config?.uiStyles?.attributes?.type=='calendar'" [element]="element" [form]="form"></nm-input-calendar>
     <nm-comboBox id="{{id}}"  [formControlName]="element.config?.code"  [disableFormControl]="form.get(element.config?.code)"
         [disableCondition]="element?.enabled?.currState" *ngIf="element.config?.uiStyles?.attributes?.alias == 'ComboBox'" [element]="element"  [form]="form"></nm-comboBox>
     <nm-input-radio id="{{id}}"  [formControlName]="element.config?.code"  [disableFormControl]="form.get(element.config?.code)"
@@ -16,7 +18,12 @@
     <nm-multi-select-listbox id="{{id}}" *ngIf="element.config?.uiStyles?.attributes?.alias == 'MultiSelect'" [element]="element"  [form]="form"></nm-multi-select-listbox>
     <nm-multiselect-card id="{{id}}"  *ngIf="element.config.uiStyles?.attributes?.alias == 'MultiSelectCard'" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-multiselect-card>
     <nm-pickList id="{{id}}"  *ngIf="element.config?.uiStyles?.attributes?.alias == 'PickList'" [formControlName]="element.config?.code" ngDefaultControl [element]="element" [form]="form"></nm-pickList>
-    
+     <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == 'Grid'">
+        <infinite-scroll-grid [data]="element.config?.gridList" 
+            [element]="element" [form]="form" [formControlName]="element.config?.code"
+            [params]="element?.config?.gridCols" (onScrollEvent)="onScrollEvent()">
+        </infinite-scroll-grid>
+    </ng-template>
     <nm-upload id="{{id}}"  *ngIf="element.config?.uiStyles?.attributes?.alias == 'FileUpload'" [element]="element" [form]="form"></nm-upload>
     <div *ngIf="showErrors==true">
         <p *ngFor="let error of getErrors()">{{error}}</p>
