--- a/platform.web/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/platform.web/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -1,34 +1,20 @@
-.options{
-    display: inline-block;
-    width: 20%;
-    text-align: center;
-}
-
-.question-header {
-    font-weight: bold;
-    padding: 10px 5px;
-    border-top: 1px solid #000;
-
-    .options {
-        width: 8%;
-    }
-}
-
-.question-row {
-    border-top: 1px solid #000;
-    padding: 5px;
-}
-
 ng-component{
     display: inline-block;
     width:100%;
 }
+.scrollGrid {
+    border: 1px solid #cecece;
+    position: relative;
+}
 
 .ui-datatable {
     position: static;
-    font-size: .8rem;
-    table{
-        border: 1px solid #6AA6DF;
+    font-size: 1rem;
+    .ui-selection-column .ui-chkbox {
+        display: inline-block;
+    }
+    .ui-datatable-scrollable-body{
+        min-height: 200px;
     }
     
     th.ui-state-default{
@@ -49,24 +35,31 @@ ng-component{
         &.ui-widget-content.ui-datatable-odd {
             background-color: #fff;
         }
+        &.ui-widget-content.ui-state-highlight { 
+            color: inherit;
+        }
     }
     .ui-datatable-footer {
         border: none;
         background: none;
         text-align: left;
-        font-size: .6rem;
+        font-size: .8rem;
+        padding: 0;
     }
     th.ui-sortable-column:not(.ui-state-active):hover {
         background-color: $gray-dark;
         color: #fff;
     }
-    th.col-icon {
+    .col-icon {
         width: 30px;
     }
-    //this is for action icon width as last column in grid -- needs to isolate this grid style
-    .ui-datatable-thead > tr > th:last-child {
+    .col-select {
+        width: 38px;
+    }
+    .actionMenu {
         width: 50px;
     }
+    
     .ui-datatable-thead > tr > th {
         position: relative;
         text-align: left;
@@ -78,8 +71,8 @@ ng-component{
             text-align: left;
             max-width: 65%;
             margin-right:.3rem;
-            // overflow: hidden;
-            // text-overflow: ellipsis;
+             overflow: hidden;
+             text-overflow: ellipsis;
             // height: 1.3rem;
         }
         .gridFilterIcon {
@@ -124,11 +117,12 @@ ng-component{
 .ui-widget-header {
     border: none;
     text-align: right;
-    font-size: .6rem;
+    font-size: .8rem;
+    &.ui-paginator {
+        font-size: .6rem;
+    }
 }
-div#gsFlexGrid {
-    position: relative;
-}
+
 p-header {
     position: absolute;
     left: 1rem;
