--- a/platform.web/nimbusui/src/app/components/home/home-layout.component.html
+++ b/platform.web/nimbusui/src/app/components/home/home-layout.component.html
@@ -9,8 +9,8 @@
 
 	<div id="main-content" class="main-content" >
         <router-outlet></router-outlet>
-
-        <nm-footer-global></nm-footer-global>
+                
+        <nm-footer-global [footerConfig] = "footer"></nm-footer-global>
 
 	</div><!--  END main-content  -->
 	
