# WARNING: head commit changed in the meantime
Merge branch 'feature/M9_GridSupportInForm' of
https://AF59985@bitbucket.anthem.com/scm/nim/anthm-internal-oss-backend.git
into feature/M9_GridSupportInForm

--- a/platform.web/nimbusui/src/app/components/platform/footer/footer-global.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/footer/footer-global.component.html
@@ -1,5 +1,5 @@
-<footer class="nm-footer" *ngIf="message">
-    <h1>{{message}}</h1>
+<footer class="nm-footer">
+  
     <div class="footer-text">
         <nm-paragraph [element]="footerConfig.disclaimer"></nm-paragraph>
         <ul *ngIf="footerConfig">
