Comment out active state check on setstate of a parameter

--- a/platform.web/nimbusui/src/app/components/platform/tile.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/tile.component.html
@@ -1,4 +1,4 @@
-<div class="card-holder" id="{{code}}" [ngClass]="styleWd">
+<div class="card-holder" id="{{code}}" [ngClass]="styleWd" *ngIf="visible==true">
 	<div class="card card-block {{styleHt}}">
 		<div class='windowControls'>
 			 <button type="button" class="btn btn-icon windowControl">
