--- a/platform.web/nimbusui/src/app/components/platform/section.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/section.component.html
@@ -41,7 +41,7 @@
                 <nm-grid-container [element]="element"></nm-grid-container>
             </ng-template>
             <ng-template [ngIf]="element.alias == 'Grid'">
-                <infinite-scroll-grid [data]="element.config?.gridList" 
+                <infinite-scroll-grid  
                     [element]="element" 
                     [params]="element?.config?.gridCols" (onScrollEvent)="onScrollEvent()">
                 </infinite-scroll-grid>
