global header working for M9

--- a/platform.web/nimbusui/src/app/components/home/home-layout.component.html
+++ b/platform.web/nimbusui/src/app/components/home/home-layout.component.html
@@ -4,6 +4,7 @@
             [leftMenuItems]="leftMenuItems">
 </nm-header-global>
 <!-- Everything after header -->
+<!-- <nm-nav-menu-global></nm-nav-menu-global> -->
 
 <div class='wrapper'>
 
