fixing style and program name temporarily

--- a/platform.web/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -15,7 +15,7 @@
                 </a>
 
                 <!-- <ng-template [element]="branding.title" *ngIf="branding.title == 'Long Term Services Supports(LTSS)'"> -->
-                <a href="#" class="fa-icon-link settings mr-2" *ngIf="branding?.title == 'Long Term Services &amp; Supports(LTSS)'"></a>
+                <a href="#" class="fa-icon-link settings mr-2" *ngIf="branding?.title === 'Long Term Services &amp; Supports (LTSS)'"></a>
                 <!-- </ng-template> -->
 
             </div>
