Changed global logout link from '#' to 'logout'

--- a/platform.web/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/platform.web/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -6,7 +6,7 @@
         <div class="headerMenu pull-right header-link header-font">
             <a class="sr-only" aria-hidden="true" href="">Skip Navigation</a>
             <a class="helpLink" href="#">Help</a>
-            <a class="logoutLink" href="#">Log Out</a>
+            <a class="logoutLink" href="logout">Log Out</a>
             <div class="btn-group mt-1 pull-right">
 
                 <a href="#" class="fa-icon-link alerts mr-2">
